<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:layout_marginTop="80dp"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".MainActivity">
<ScrollView
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="match_parent"
    android:layout_height="640dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">
        <ImageView
            android:id="@+id/imgPicture"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name_label"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_hint"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>
        <EditText
            android:id="@+id/etPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password_label"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>
        <EditText
            android:id="@+id/etPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>
        <TextView
            android:id="@+id/tvGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_label"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>
        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>
            <RadioButton
                android:id="@+id/rbWoman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>
        </RadioGroup>
        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/country_label"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>
        <Spinner
            android:id="@+id/spCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/cbConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept_terms"
            android:layout_marginTop="8dp"/>
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>